fix(landing): cta layout issue

--- a/apps/landing/src/components/Landing/CTA.astro
+++ b/apps/landing/src/components/Landing/CTA.astro
@@ -4,7 +4,7 @@ import DeviceLink from '../DeviceLink.astro';
 ---
 
 <div
-  class="mx-4 flex h-[50vh] flex-col items-center justify-start text-center lg:w-1/2"
+  class="mx-4 mb-20 flex min-h-[50vh] flex-col items-center justify-start text-center lg:w-1/2"
 >
   <div class="text-4xl font-semibold">
     Get into <span class="underline decoration-primary decoration-wavy"
