--- a/apps/landing/src/components/Layout/Navbar.astro
+++ b/apps/landing/src/components/Layout/Navbar.astro
@@ -23,7 +23,7 @@ import DeviceLink from '../DeviceLink.astro';
     <div>Flowmo</div>
   </a>
   <div class="hidden gap-10 text-lg font-medium sm:flex">
-    <a href="/downloads">Downloads</a>
+    <a href="/mobile">Mobile</a>
     <a href="/pricing">Pricing</a>
     <a href="/blog">Blog</a>
   </div>
