feat(landing): open link in new tab

--- a/apps/landing/src/components/Layout/Footer.astro
+++ b/apps/landing/src/components/Layout/Footer.astro
@@ -24,6 +24,7 @@ import logoNoBg from '../../images/logo-no-bg.png';
     <div class="flex items-center justify-center gap-3">
       <a
         href="https://x.com/flowmoio"
+        target="_blank"
         class="cursor-pointer fill-[#ffffff70] transition-all hover:fill-[#ffffff]"
         aria-label="X"
       >
@@ -31,6 +32,7 @@ import logoNoBg from '../../images/logo-no-bg.png';
       </a>
       <a
         href="https://bsky.app/profile/flowmo.io"
+        target="_blank"
         class="cursor-pointer fill-[#ffffff70] transition-all hover:fill-[#ffffff]"
         aria-label="Bluesky"
       >
@@ -38,6 +40,7 @@ import logoNoBg from '../../images/logo-no-bg.png';
       </a>
       <a
         href="https://www.linkedin.com/company/flowmoio"
+        target="_blank"
         class="cursor-pointer fill-[#ffffff70] transition-all hover:fill-[#ffffff]"
         aria-label="LinkedIn"
       >
@@ -45,6 +48,7 @@ import logoNoBg from '../../images/logo-no-bg.png';
       </a>
       <a
         href="https://github.com/flowmoio/flowmo"
+        target="_blank"
         class="cursor-pointer fill-[#ffffff70] transition-all hover:fill-[#ffffff]"
         aria-label="GitHub"
       >
