--- a/apps/landing/src/layouts/BaseLayout.astro
+++ b/apps/landing/src/layouts/BaseLayout.astro
@@ -40,5 +40,13 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
       <slot />
     </div>
     <Footer />
+    <a
+      href="https://producthunt.com/products/flowmoio"
+      target="_blank"
+      class="fixed bottom-5 right-4 z-50 hidden rounded-full px-4 py-0.5 text-sm font-medium text-black shadow-xl lg:block"
+      style="background: linear-gradient(to right, #f4e1f5, #e1edfb, #e9f4db, #fceddd);"
+    >
+      Launching soon!
+    </a>
   </body>
 </html>
