feat(landing): refine hero section

--- a/apps/landing/src/components/Landing/Hero.astro
+++ b/apps/landing/src/components/Landing/Hero.astro
@@ -11,13 +11,13 @@ import DeviceLink from '../DeviceLink.astro';
   <div
     class="my-auto flex flex-col items-center gap-10 text-background sm:mt-auto sm:translate-y-1/2"
   >
-    <h1 class="text-center text-6xl font-bold">
+    <h2 class="text-center text-6xl font-bold">
       Enter Flow &<br />Stay Focused
-    </h1>
-    <div class="max-w-md text-center">
-      A Flowmodoro timer helping you enter flow state and stay focused with the
+    </h2>
+    <h1 class="max-w-md text-center">
+      Flowmodoro app helping you enter flow state and stay focused with the
       Flowtime technique
-    </div>
+    </h1>
     <DeviceLink
       class="flex cursor-pointer items-center rounded-full bg-background px-5 py-3 text-lg text-white shadow shadow-md transition-all duration-300 hover:scale-[1.03]"
     >
