--- a/apps/landing/src/pages/index.astro
+++ b/apps/landing/src/pages/index.astro
@@ -6,8 +6,8 @@ import CTA from '../components/Landing/CTA.astro';
 ---
 
 <DynamicNavbarLayout
-  title="Flowmo | A Flowmodoro Timer Helping You Enter Flow State"
-  description="A Flowmodoro timer web app helping you enter flow state and stay focused with the Flowtime Technique"
+  title="Flowmo | Flowmodoro App Helping You Enter Flow State"
+  description="A Flowmodoro timer app helping you enter flow state and stay focused with the Flowtime Technique"
 >
   <Hero />
   <Features />
